--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 </div>
                 <div>
                     <h2>Contacts</h2>
-                    <h3>medieval.pizza@gmail.com</h3>
-                    <h3>+38 099 370 14 75</h3>
+                    <h3>d_hakh_foais_19_1_b_d@knute.edu.ua</h3>
+                    <h3>+38 066 551 46 16</h3>
                     <h3><a href="">Facebook</a></h3>
                 </div>
             </div>
